<resources>
    <string name="app_name">EvotorAppForWork</string>
    <string name="app_description">This is Evotor test app</string>
    <string name="device_info">Information about this device</string>
    <string name="custom_cash_check">Custom cash check</string>
    <string name="cash_register">Сash register</string>
    <string name="print">Print</string>
    <string name="Value">Value</string>
    <string name="result">Result</string>
    <string name="text">Text</string>
    <string name="image">Image</string>
    <string name="barcode">Barcode</string>
    <string name="add_field">Add Field</string>
    <string name="get_imei">Get IMEI</string>
    <string name="get_model">Get model</string>
    <string name="get_POS">Get pos</string>
    <string name="get_wall">Get EvoWall</string>
    <string name="get_SS">Get system service</string>
    <string name="get_DS">Get device service</string>
    <string name="get_installed_apps">Get installed apps</string>
    <string name="get_android_version">Get Android version</string>
    <string name="send_result">Send Result to...</string>
    <string name="copy">COPY</string>
    <string name="copied">Copied!</string>
    <string name="clear">CLEAR</string>
</resources>
