<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sprischepko.evotorappforwork.InfoDeviceActivity">
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="5">
    <Button
        android:id="@+id/clear_result_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:layout_weight="2"/>
    <TextView
        android:id="@+id/device_info_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_weight="1"
        android:hint="@string/result"
        android:gravity="center"/>
    <Button
        android:id="@+id/copy_result_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copy"
        android:layout_weight="2" />
</LinearLayout>
    <Button
        android:id="@+id/send_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_result"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/get_imei_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_imei" />
    <Button
        android:id="@+id/get_model_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_model" />
    <Button
        android:id="@+id/get_POS_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_POS" />
    <Button
        android:id="@+id/get_wall_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_wall" />
    <Button
        android:id="@+id/get_SS_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_SS" />
    <Button
        android:id="@+id/get_DS_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_DS" />

    <Button
        android:id="@+id/get_installed_apps_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_dark"
        android:text="@string/get_installed_apps" />
    <Button
        android:id="@+id/get_android_version_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_android_version" />


</LinearLayout>

