<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sprischepko.evotorappforwork.CheckSettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/print_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/print" />

        <EditText
            android:id="@+id/text_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Value"
            android:inputType="textPersonName" />

        <RadioGroup
            android:id="@+id/check_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/text" />

            <RadioButton
                android:id="@+id/rbImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/image" />

            <RadioButton
                android:id="@+id/rbBarCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/barcode" />



        </RadioGroup>

        <Button
            android:id="@+id/add_field_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_field" />

    </LinearLayout>

    <ListView
        android:id="@+id/list_check"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
